--- a/print.html
+++ b/print.html
@@ -429,7 +429,7 @@ because nobody can own it.</p>
 </li>
 <li>
 <p>Digital artifacts are complete. An NFT that points to off-chain content
-on IPFS or Arweave is incomplete, and thus is not a digital artifact.</p>
+on IPFS or Arweave is incomplete, and thus not a digital artifact.</p>
 </li>
 <li>
 <p>Digital artifacts are permissionless. An NFT which cannot be sold without
@@ -812,10 +812,12 @@ hypothesis.</p>
 <h2 id="pay-attention-to-error-messages"><a class="header" href="#pay-attention-to-error-messages">Pay attention to error messages</a></h2>
 <p>Read all error messages and don't tolerate warnings.</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="donate"><a class="header" href="#donate">Donate</a></h1>
+<h2 id="why"><a class="header" href="#why">Why</a></h2>
 <p>Ordinals is an open-source project by me, Casey Rodarmor, in development since
 early 2022. I have been assisted by a ragtag band of contributors, bitcoiners,
-and degenerates, including two paid apprentices. All project costs have been
-paid out of pocket by me, and I have not raised outside funds, and may never.</p>
+and degenerates, including two paid apprentices and other remunerated
+vagabonds. All project costs have been paid out of pocket by me, and I have not
+raised outside funds, and may never.</p>
 <p>If you so desire, consider a donation. Donations of bitcoin are appreciated,
 but donations of rare, exotic, and inscribed sats are especially treasured.</p>
 <p>Donations are not tax-deductible, refundable, or earmarked for any specific
@@ -827,15 +829,17 @@ bitcoin are likely to be spent on rare and exotic sats and making whole-block
 inscriptions.</p>
 <p>Ordinals and inscriptions are a love letter to Bitcoin, the Internet,
 programming, and the World Wide Web. Money is nice, but that's not why I'm
-doing it. Don't worry if you can't donate. Merely using this strange, evolving
-creation is thanks enough. I love having you along for the ride, wherever it
-may take us.</p>
-<p>I have in my possession <a href="https://www.youtube.com/watch?v=bLOlsa6K5TI">21
-opendimes</a> whose addresses are
-below.</p>
-<p>Pick one that speaks to you, and send to it what you will.</p>
+doing this. Don't worry if you can't donate. Merely using this strange,
+evolving creation is thanks enough. I love having you along for the ride,
+wherever it may take us.</p>
 <p>Love,
 Casey</p>
+<h2 id="how"><a class="header" href="#how">How</a></h2>
+<p>I have in my possession 21 glittering <a href="https://opendime.com/">Opendimes</a>:</p>
+<iframe frameborder=0 style=aspect-ratio:16/9
+src=https://www.youtube.com/embed/bLOlsa6K5TI title="YouTube video player"
+width=100%></iframe>
+<p>Each of these possesses a private key, whence is derived a donation address:</p>
 <ol>
 <li><a href="https://mempool.space/address/13aG4o1cEKVLzuLdwKrmmP65o6WKh8t4L3"><code>13aG4o1cEKVLzuLdwKrmmP65o6WKh8t4L3</code></a></li>
 <li><a href="https://mempool.space/address/1FrhgVqWF7aSM9945BRsrEqQZFEM3kZXQJ"><code>1FrhgVqWF7aSM9945BRsrEqQZFEM3kZXQJ</code></a></li>
@@ -859,6 +863,8 @@ Casey</p>
 <li><a href="https://mempool.space/address/1QHhEm7EycvmeGY6qp1M4canXMh7XP4oHv"><code>1QHhEm7EycvmeGY6qp1M4canXMh7XP4oHv</code></a></li>
 <li><a href="https://mempool.space/address/14RkYZw1d2W3AyfqQge83GmWAaynhPUDtN"><code>14RkYZw1d2W3AyfqQge83GmWAaynhPUDtN</code></a></li>
 </ol>
+<p>Pick an address that speaks to you, and send to it what you will: bitcoin,
+inscriptions, ordinal satoshis, or simply thoughts and prayers.</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="ordinal-theory-guides"><a class="header" href="#ordinal-theory-guides">Ordinal Theory Guides</a></h1>
 <p>See the table of contents for a list of guides, including a guide to the
 explorer, a guide for sat hunters, and a guide to inscriptions.</p>
@@ -992,7 +998,7 @@ content, limit inscription content to less than 400,000 weight units. 390,000
 weight units should be safe.</p>
 <h2 id="creating-inscriptions"><a class="header" href="#creating-inscriptions">Creating Inscriptions</a></h2>
 <p>To create an inscription with the contents of <code>FILE</code>, run:</p>
-<pre><code>ord wallet inscribe FILE
+<pre><code>ord wallet inscribe --fee-rate FEE_RATE FILE
 </code></pre>
 <p>Ord will output two transactions IDs, one for the commit transaction, and one
 for the reveal transaction, and the inscription ID. Inscription IDs are of the
@@ -1306,7 +1312,7 @@ ordinals.</p>
 <code>bitcoin-cli -rpcwallet=ord rescanblockchain 767430</code></p>
 <p>You can then check your wallet's inscriptions using <code>ord wallet inscriptions</code></p>
 <p>Note that if you have previously created a wallet with <code>ord</code>, then you will already have a wallet with the default name, and will need to give your imported wallet a different name. You can use the <code>--wallet</code> parameter in all <code>ord</code> commands to reference a different wallet, eg:</p>
-<p><code>ord --wallet ord_from_sparrow restore &quot;BIP39 SEED PHRASE&quot;</code></p>
+<p><code>ord --wallet ord_from_sparrow wallet restore &quot;BIP39 SEED PHRASE&quot;</code></p>
 <p><code>ord --wallet ord_from_sparrow wallet inscriptions</code></p>
 <p><code>bitcoin-cli -rpcwallet=ord_from_sparrow rescanblockchain 767430</code></p>
 <h2 id="sending-inscriptions-with-sparrow-wallet"><a class="header" href="#sending-inscriptions-with-sparrow-wallet">Sending inscriptions with Sparrow Wallet</a></h2>
