deploy: b6be2b92f341f5738bbe2cb538ed1f7e93c3469a

--- a/inscriptions.html
+++ b/inscriptions.html
@@ -118,7 +118,7 @@
                         <a href="print.html" title="Print this book" aria-label="Print this book">
                             <i id="print-button" class="fa fa-print"></i>
                         </a>
-                        <a href="https://github.com/casey/ord" title="Git repository" aria-label="Git repository">
+                        <a href="https://github.com/ordinals/ord" title="Git repository" aria-label="Git repository">
                             <i id="git-repository-button" class="fa fa-github"></i>
                         </a>
 
@@ -181,20 +181,19 @@ follows:</p>
 <pre><code>OP_FALSE
 OP_IF
   OP_PUSH &quot;ord&quot;
-  OP_1
+  OP_PUSH 1
   OP_PUSH &quot;text/plain;charset=utf-8&quot;
-  OP_0
+  OP_PUSH 0
   OP_PUSH &quot;Hello, world!&quot;
 OP_ENDIF
 </code></pre>
 <p>First the string <code>ord</code> is pushed, to disambiguate inscriptions from other uses
 of envelopes.</p>
-<p><code>OP_1</code> indicates that the next push contains the content type, and <code>OP_0</code>
-indicates that subsequent data pushes contain the content itself. Multiple data
+<p><code>OP_PUSH 1</code> indicates that the next push contains the content type, and <code>OP_PUSH 0</code>indicates that subsequent data pushes contain the content itself. Multiple data
 pushes must be used for large inscriptions, as one of taproot's few
 restrictions is that individual data pushes may not be larger than 520 bytes.</p>
 <p>The inscription content is contained within the input of a reveal transaction,
-and the inscription is made on the first sat of its first output. This sat can
+and the inscription is made on the first sat of its input. This sat can
 then be tracked using the familiar rules of ordinal theory, allowing it to be
 transferred, bought, sold, lost to fees, and recovered.</p>
 
